cmake_minimum_required (VERSION 2.8.12)

project (samples_cpp)

option (skip_qml_sample_build OFF)

add_subdirectory (chunks_live_qtwidgets)
add_subdirectory (device_tree)
add_subdirectory (get_first_pixel)
add_subdirectory (lego_trigger)
add_subdirectory (open_camera)
add_subdirectory (open_camera_load_userset_default)
add_subdirectory (open_camera_by_serno)
add_subdirectory (open_camera_select_cti)
add_subdirectory (simple_live_qtwidgets)
add_subdirectory (save_images_live_qtwidgets)
add_subdirectory (walkthrough)
add_subdirectory (multi_camera_live_qtwidgets)
add_subdirectory (linescan_live_qtwidgets)
add_subdirectory (remote_device_events)
add_subdirectory (host_auto_features_live_qtwidgets)
if (NOT skip_qml_sample_build)
    add_subdirectory (simple_live_qml)
    add_subdirectory (chunks_live_qml)
    add_subdirectory (sequencer_live_qml)
endif ()
